# GBE_CCB

./: .gitignore  README.md  pyproject.toml  run-dev.ps1  run-hml.ps1  run-prod.ps1
app_py/: cotas_reservadas.py  db.py  requerimentos_devolvidos.py  requerimentos_devolvidos_pendentes_tratadas.py  requerimentos_nao_tratados.py
app_web/: requerimentos_deferidos.py
