[project]
name = "ccb"
version = "0.1.0"
description = ""
authors = [
    {name = "Rubens de Oliveira Lima",email = "rubenslima@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pandas (>=2.3.3,<3.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "pyodbc (>=5.3.0,<6.0.0)",
    "xlsxwriter (>=3.2.9,<4.0.0)",
    "streamlit (>=1.51.0,<2.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "ccb", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
